# motif-cli

./: .gitignore  CLAUDE.md  IDLE-TIMEOUT-SPEC.md  LICENSE  README.md  llms.txt  pyproject.toml
.claude/worktrees/live-dashboard/: README.md  pyproject.toml
.claude/worktrees/live-dashboard/demo/: package-lock.json
.claude/worktrees/live-dashboard/demo/src/: Root.tsx
.claude/worktrees/live-dashboard/examples/: README.md
.claude/worktrees/live-dashboard/motif/: __init__.py  cli.py  setup_cmd.py  update.py
.claude/worktrees/live-dashboard/motif/analysis/: pipeline.py
.claude/worktrees/live-dashboard/motif/exemplars/: QUALITY_BAR.md  react-patterns.md
.claude/worktrees/live-dashboard/motif/live/: display.py  metrics.py  poller.py  runner.py
.claude/worktrees/live-dashboard/motif/report/: markdown.py
.claude/worktrees/live-dashboard/motif/rules/: __init__.py
demo/: package.json
demo/src/: MotifDemo.tsx  MotifLiveDashboard.tsx  Root.tsx
docs/: METRICS.md
examples/: README.md  analysis.json  report.md
motif/: __init__.py  __main__.py  cli.py  config.py  setup_cmd.py  store.py
motif/analysis/: __init__.py  pipeline.py  prompts.py
motif/exemplars/: LICENSE  TRUSTED_REPOS.md  brainstorming.md  systematic-debugging.md
motif/extractors/: claude_code.py  copilot_cli.py  copilot_vscode.py  cursor.py
motif/live/: __init__.py  display.py  metrics.py  poller.py  runner.py
motif/report/: html.py  metrics.py
motif/rules/: generator.py
motif/skill/: SKILL.md
skill/: SKILL.md
skills/motif-analyze/: SKILL.md
