[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "motif-cli"
version = "0.2.0"
description = "Discover your coding patterns from AI conversations. Generate personalized .cursorrules, CLAUDE.md, and skills."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Aviv Sheriff", email = "aviv@howyougotthere.com"},
]
keywords = ["cursor", "claude-code", "ai", "coding-patterns", "developer-tools", "cursorrules"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
motif = "motif.cli:cli"

[project.urls]
Homepage = "https://github.com/Bulugulu/motif-cli"
Repository = "https://github.com/Bulugulu/motif-cli"

[tool.setuptools.packages.find]
include = ["motif*"]

[tool.setuptools.package-data]
motif = ["skill/*"]
